ughhhhh finally fixed my spacing problem that turned out to be a random margin hidden in a nested h1

--- a/pawtastic/src/App.css
+++ b/pawtastic/src/App.css
@@ -1,5 +1,3 @@
-
-
 #wrapper{
   width: 100vw;
   height: 100vh;
@@ -30,7 +28,6 @@ nav {
 #rightSide {
   height: 80%;
   width: 60%;
-  margin: 0;
   background-color: #faeceb;
 }
 
@@ -38,22 +35,26 @@ h1 {
   width: 100%;
   height: 10%;
   text-align: center;
+  margin-top: 0;
 }
 
 #formWrap {
   width: 100%;
-  height: 80%;
-  background-color: faeceb;
+  height: 100%;
+  background-color: purple;
+  /* position: relative; */
+  /* margin:0; */
+  /* display: none; */
 }
 
 form {
   width: 100%;
-  height: 100%;
+  height: 90%;
   background-color: cornflowerblue;
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* justify-content: center; */
-  /* align-items: center; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 select {
@@ -108,7 +109,8 @@ so that default file input is hidden, but clickable */
 }
 
 #navButtons {
-  background-color: #f0f1f8;
+  background-color: orange;
   height: 10%;
   width: 100%;
+  top: 900px;
 }
